cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
#add_executable( DisplayImage src/displayImage.cpp )
add_executable( poseConvert src/poseConvert.cpp )
#add_executable( prepareDataset src/prepareDataset.cpp )
#add_executable( prepareDataset src/preProcessKITTY.cpp )
add_executable( cameraCalib src/camera_calibration.cpp )
#add_executable( prepareDataset src/makeVideo.cpp )
#target_link_libraries( poseConvert ${OpenCV_LIBS} )

find_package(GTSAM REQUIRED)
include_directories(${GTSAM_INCLUDE_DIR})
target_link_libraries(poseConvert gtsam ${OpenCV_LIBS} )
#target_link_libraries(prepareDataset gtsam ${OpenCV_LIBS} )
target_link_libraries(cameraCalib ${OpenCV_LIBS} )
